################################################################################
# Copyright (c) 2019-2022 Vladislav Trifochkin
#
# This file is part of `common-lib`.
#
# Changelog:
#      2022.08.07 Initial version.
################################################################################
add_subdirectory(sha256sum)
