################################################################################
# Copyright (c) 2019-2025 Vladislav Trifochkin
#
# This file is part of `common-lib`.
#
# Changelog:
#      2022.08.07 Initial version.
#      2023.07.16 Added `traverse_directory`.
#      2023.07.17 Added `standard_paths`.
#      2024.12.10 Added `synchronized`.
#      2025.07.07 Added `termcolor`.
################################################################################
add_subdirectory(hexdump)
add_subdirectory(synchronized)
add_subdirectory(sha256sum)
add_subdirectory(standard_paths)
add_subdirectory(traverse_directory)
add_subdirectory(termcolor)
